# V-SpiritMusic

./: CMakeLists.txt  GitCommitVersion.cmake  README.md  VSpiritMusic.desktop
arch/: PKGBUILD
src/: CMakeLists.txt  main.cpp  qml_files.cmake  resources.cmake  settingsmanager.cpp  settingsmanager.h
src/backend/: jackclient.cpp  jackclient.h  midiclient.cpp  midiclient.h  midiportmodel.cpp  midiportmodel.h  midiutils.h
src/qml/: Main.qml
src/qml/controls/: VButton.qml  VChannelIndicator.qml  VCheckBox.qml  VComboBox.qml  VGroupBox.qml  VKnob.qml  VLayerButton.qml  VLayerControl.qml  VMemoryButton.qml  VMidiRange.qml  VPopup.qml  VRegistraionsButton.qml  VRegistrationsList.qml  VSlider.qml  VSliderPopup.qml  VSliderPopupH.qml  VSpinBox.qml  VSplitView.qml  VSwitch.qml  VTabButton.qml  VTextField.qml
src/qml/layouts/: VLayerContainer.qml  VLayersControlContainer.qml  VTabBar.qml
src/qml/layouts/layers/: VLayerContainer.qml  VLayerRegistraions.qml  VLayersControlContainer.qml
src/qml/layouts/settings/: TabBarSettings.qml
src/qml/layouts/settings/aboutPages/: AboutPage.qml
src/qml/layouts/settings/settingsPages/: ConnectionsPage.qml
src/qml/layouts/sounds/: VSoundsCategories.qml  VSoundsContainer.qml
src/qml/themes/: Theme.qml
src/qml/views/: Layers.qml  Settings.qml  Sounds.qml  Voices.qml  VoicesLayout1.qml
src/qml/views/layouts/: VTabBar.qml
